# anekamacam

./: .gitignore  Cargo.toml  README.md  build-stages.sh  clippy.toml  log.txt  log1.txt  round-robin.sh  rr.sh  rustfmt.toml
.github/meta/: iconmap.json
base/game/: Cargo.toml
base/game/src/: board.rs  lib.rs
base/main/: Cargo.toml
base/main/src/: main.rs
configs/: ai-wok.conf  almost.conf  amazon.conf  asean.conf  berolina.anm  berolina.conf  berolina.toml  capablanca.anm  capablanca.conf  capablanca.toml  chancellor.conf  chigorin.conf  crazyhouse.conf  embassy.conf  euroshogi.conf  example.conf  fide.anm  fide.conf  fide.toml  gothic.conf  grand.conf  grand.toml  hoppelpoppel.conf  janggi.conf  janus.conf  judkins.conf  knightmate.conf  los-alamos.anm  los-alamos.conf  los-alamos.toml  makruk.conf  max.conf  mini-shogi.conf  mini-xiangqi.conf  mini-xiangqi.toml  minishogi.conf  minixiangqi.conf  modern.conf  newzealand.conf  ouk-chaktrang.conf  (+11 more)
lib/game/: Cargo.toml
lib/game/src/: board.rs  lib.rs  move_parse.rs
lib/io/: Cargo.toml
lib/twiddling/: Cargo.toml
lib/twiddling/src/: lib.rs
meta/: iconmap.json
plans/: 01-search-roadmap.md  02-time-to-depth.md  03-strength.md  04-search-speed-evaluation-tuning.md  05-colab-compute-datagen-tuning.md  06-search-evaluation-legality-recovery.md  07-strength-iteration-2.md  master-plan.md  pawn-structure-and-pruning-audit.md  time-to-depth-optimization.md
res/: berolina.perft  capablanca.perft  crazyhouse.perft  fide-initial.perft  fide-kiwipete.perft  fide.perft  fideinit.perft  grand.perft  janggi.perft  los-alamos.perft  mini-xiangqi.perft  shatranj.perft  shogi.perft  sittuyin.perft  xiangqi.perft  xianqi.perft
res/bench/: probes.txt
res/data/fide/: latest.data
res/dicts/: ai-wok.dict  almost.dict  amazon.dict  asean.dict  berolina.dict  chancellor.dict  chigorin.dict  crazyhouse.dict  embassy.dict  euroshogi.dict  example.dict  fide.dict  gothic.dict  grand.dict  hoppelpoppel.dict  janus.dict  judkins.dict  knightmate.dict  mini-shogi.dict  mini-xiangqi.dict  minishogi.dict  minixiangqi.dict  modern.dict  pocketknight.dict  shogi.dict  standard.dict  xiangqi.dict
res/param/berolina/: latest.param
res/param/capablanca/: latest.param
res/param/crazyhouse/: latest.param
res/param/example/: latest.param
res/param/fide/: 2.param  latest.param
res/param/grand/: latest.param
res/param/janggi/: latest.param
res/perft/: berolina.perft  fide.perft  janggi.perft  makruk.perft  mini-shogi.perft  mini-xiangqi.perft  shogi.perft  sittuyin.perft  xiangqi.perft
src/: Cargo.toml  constants.rs  main.rs  prelude.rs
src/debug/: console.rs  datagen.rs  sprt.rs  tuning.rs
src/game/: Cargo.toml  hash.rs  util.rs
src/game/drops/: drop_list.rs  drop_parse.rs
src/game/hash/: zobrist.rs
src/game/moves/: drop_list.rs  drop_parse.rs  move_list.rs  move_parse.rs  pattern_match.rs  pattern_parse.rs  perft.rs
src/game/patterns/: pattern_match.rs
src/game/position/: evaluation.rs  hash.rs  search.rs
src/game/representations/: board.rs  drop.rs  moves.rs  pattern.rs  piece.rs  state.rs  vector.rs
src/game/search/: move_ordering.rs  parallel.rs  parameters.rs  pv_table.rs  qsearch_tt.rs  quiescence.rs  see.rs  transposition.rs  transposition_table.rs  tt_table.rs
src/game/src/: constants.rs  hash.rs  lib.rs  util.rs
src/game/src/magic/: magic_number.rs
src/game/src/moves/: move_gen.rs  move_list.rs  move_match.rs  move_parse.rs  util.rs  vector.rs  vectors.rs
src/game/src/representations/: board.rs  moves.rs  piece.rs  state.rs  vector.rs
src/io/: Cargo.toml  board_io.rs  game_io.rs  logger.rs  move_io.rs  piece_io.rs  tui.rs
src/io/protocols/: protocol.rs  translation.rs  ucci.rs  uci.rs  usi.rs
src/io/src/: board_io.rs  game_io.rs  lib.rs  piece_io.rs
src/main/: Cargo.toml
src/main/src/: main.rs
src/res/param/grand/: latest.param
tools/: colab_datagen.ipynb  merge_shards.py  referee.py  replay_fixtures.py  run_probes.sh  run_suite.sh  run_ttd.sh  speed_suite.py
util/: qperft
(+10 files in other folders)
