[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug-assertions = true

[workspace]
resolver = "3"
members = [
    "src"
]

[workspace.dependencies]
bnum = "*"
regex = "*"
ntest = "*"
lazy_static = "*"
timed = "*"
rand = "*"
fs = "*"
hotpath = "*"
hashbrown = "*"
log = "*"
env_logger = "*"
ratatui = {
    version = "*",
    features = ["unstable-rendered-line-info"]
}
chrono = "*"
crossterm = "*"
arboard = "*"
