[profile.release]
debug = false
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true

[profile.dev]
debug-assertions = true

[workspace]
resolver = "3"
members = [
    "src"
]

[workspace.dependencies]
bnum = "*"
regex = "*"
ntest = "*"
lazy_static = "*"
timed = "*"
rand = ">=0.9.3"
fs = "*"
hotpath = "*"
hashbrown = "*"
log = "*"
env_logger = "*"
ratatui = {
    version = "*",
    features = ["unstable-rendered-line-info"]
}
chrono = "*"
rayon = "*"
crossterm = "*"
arboard = "*"
include_dir = "*"
