[package]
name = "main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anekamacam"
path = "main.rs"

[dependencies]
hotpath = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
bnum = { workspace = true }
rand = { workspace = true }
backtrace-on-stack-overflow = { workspace = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
