[package]
name = "main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anekamacam"
path = "main.rs"

[lints.rust]
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
large_stack_arrays = "deny"

[dependencies]
hotpath = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
bnum = { workspace = true }
rand = { workspace = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
