[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
bnum = { workspace = true }
rand = { workspace = true }
hotpath = { workspace = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]